[package]
name = "snl"
description = "snl (snail) slows files down, think 'tail -f' but slower"
version = "0.2.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/EightBitBoy/snl"
repository = "https://github.com/EightBitBoy/snl"
license-file = "LICENSE.txt"
keywords = ["cli", "tail", "tool", "log", "logging"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "snl"
path = "main.rs"
